<resources>
    <string name="app_name">Playlist Maker</string>
    <string name="question_text">Вопрос:</string>
    <string name="the_question">Рейтинг этого фильма больше, чем 9?:</string>
    <string name="answer_no">Нет</string>
    <string name="answer_yes">Да</string>
    <string name="title_name">Playlist maker</string>
    <string name="search_text">Поиск</string>
    <string name="library_text">Медиатека</string>
    <string name="settings_text">Настройки</string>
    <string name="dark_theme_text">Темная тема</string>
    <string name="sharing_text">Поделиться приложением</string>
    <string name="support_text">Написать в поддержку</string>
    <string name="agreement_text">Пользовательское соглашение</string>
    <string name="agreement_link">https://yandex.ru/legal/practicum_offer/</string>
    <string name="share_app_link">https://practicum.yandex.ru/learn/android-developer/</string>
    <string name="test_email">dorogovmax@yandex.kz</string>
    <string name="subject_support_mail">Сообщение разработчикам и разработчицам приложения Playlist Maker</string>
    <string name="text_support_mail">Спасибо разработчикам и разработчицам за крутое приложение!</string>
    <string name="track1_url">https://is5-ssl.mzstatic.com/image/thumb/Music115/v4/7b/58/c2/7b58c21a-2b51-2bb2-e59a-9bb9b96ad8c3/00602567924166.rgb.jpg/100x100bb.jpg</string>
    <string name="track2_url">https://is5-ssl.mzstatic.com/image/thumb/Music125/v4/3d/9d/38/3d9d3811-71f0-3a0e-1ada-3004e56ff852/827969428726.jpg/100x100bb.jpg</string>
    <string name="track3_url">https://is4-ssl.mzstatic.com/image/thumb/Music115/v4/1f/80/1f/1f801fc1-8c0f-ea3e-d3e5-387c6619619e/16UMGIM86640.rgb.jpg/100x100bb.jpg</string>
    <string name="track4_url">https://is2-ssl.mzstatic.com/image/thumb/Music62/v4/7e/17/e3/7e17e33f-2efa-2a36-e916-7f808576cf6b/mzm.fyigqcbs.jpg/100x100bb.jpg</string>
    <string name="track5_url">https://is5-ssl.mzstatic.com/image/thumb/Music125/v4/a0/4d/c4/a04dc484-03cc-02aa-fa82-5334fcb4bc16/18UMGIM24878.rgb.jpg/100x100bb.jpg</string>
    <string name="test_text_0_00">0:00</string>
    <string name="test_text_artist">Petra Marklund</string>
    <string name="test_text_title">Ensam inte stark</string>
    <string name="not_found_text_ru">Ничего не нашлось</string>
    <string name="no_connection_text_ru">Проблемы со связью\n\nЗагрузка не удалась. Проверьте подключение к интернету</string>
    <string name="update_btn_text">Обновить</string>
    <string name="duration">Длительность</string>
    <string name="album">Альбом</string>
    <string name="releaseYear">Год</string>
    <string name="genre">Жанр</string>
    <string name="country">Страна</string>
    <string name="prepared_playback_time_text">00:00</string>
    <string name="_00_00">00:00</string>
    <string name="fragment_list_not_found_text">Вы не создали \n ни одного плейлиста</string>
    <string name="fav_tracks_not_found_txt">Ваша медиатека пуста</string>
    <string name="new_playlist_text">Новый плейлист</string>
    <string name="save_edited_playlist_text">Сохранить</string>
    <string name="sharing_email_subject_text">Сообщение разработчикам и разработчицам приложения Playlist Maker</string>
    <string name="sharing_email_desc_text">Спасибо разработчикам и разработчицам за крутое приложение!</string>
</resources>