<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="?attr/colorSecondary"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="@dimen/padding_12">

        <ImageView
            android:id="@+id/back_button"
            style="@style/BackButton"/>

        <TextView
            style="@style/ActivityText"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginStart="@dimen/padding_12"
            android:text="@string/settings_text"
            android:textColor="?attr/colorOnSecondary"/>
    </LinearLayout>


        <com.google.android.material.switchmaterial.SwitchMaterial
            android:id="@+id/themeSwitcher"
            style="@style/SwitchTheme"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingStart="@dimen/frame_padding_16"
            android:paddingVertical="@dimen/frame_padding_20"
            android:layout_marginEnd="6dp"
            android:text="@string/dark_theme_text"
            tools:ignore="UseSwitchCompatOrMaterialXml" />

    <FrameLayout
        android:id="@+id/share_button"
        style="@style/FrameLayoutStyle">

        <TextView
            style="@style/SettingsView"
            android:text="@string/sharing_text"/>

        <ImageView
            style="@style/SettingsIcon"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_share" />


    </FrameLayout>

    <FrameLayout
        android:id="@+id/support_button"
        style="@style/FrameLayoutStyle">

        <TextView
            style="@style/SettingsView"
            android:text="@string/support_text" />

        <ImageView
            style="@style/SettingsIcon"
            android:src="@drawable/ic_support" />


    </FrameLayout>

    <FrameLayout
        android:id="@+id/agreement_button"
        style="@style/FrameLayoutStyle">

        <TextView
            style="@style/SettingsView"
            android:text="@string/agreement_text" />

        <ImageView
            style="@style/SettingsIcon"
            android:src="@drawable/ic_forward" />
    </FrameLayout>

</LinearLayout>