<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/cardView"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/artwork"
            android:layout_width="45dp"
            android:layout_height="45dp"
            android:layout_marginLeft="@dimen/padding_13"
            android:layout_marginTop="@dimen/padding_8"
            android:layout_marginBottom="@dimen/padding_8"
            android:src="@drawable/ic_library" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="200"
            android:orientation="vertical">

            <TextView
                android:id="@+id/track_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/padding_14"
                android:fontFamily="@font/ys_display_regular"
                android:paddingLeft="@dimen/padding_8"
                android:text="@string/test_text_title"
                android:textColor="?attr/colorOnSecondary"
                android:textSize="@dimen/text_size_16"
                android:textStyle="bold" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="200"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/artist_name"
                    style="@style/ArtistDurationTrackView"
                    android:paddingLeft="@dimen/padding_8"
                    android:text="@string/test_text_artist" />

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/dot" />

                <TextView
                    android:id="@+id/track_duration"
                    style="@style/ArtistDurationTrackView"
                    android:text="@string/test_text_0_00" />
                />
            </LinearLayout>


        </LinearLayout>

        <ImageView
            style="@style/ChosenTrackView"
            android:src="@drawable/ic_forward"
            />
    </LinearLayout>

</androidx.cardview.widget.CardView>