<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools">

<androidx.constraintlayout.widget.ConstraintLayout android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:id="@+id/back_button_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintTop_toTopOf="parent"
        android:padding="@dimen/padding_12"
        tools:ignore="ExtraText">

        <ImageView
            android:id="@+id/back_button"
            style="@style/BackButton" />
        />
    </LinearLayout>
    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/leftBorder"
        android:orientation="vertical"
        app:layout_constraintGuide_begin="@dimen/frame_padding_24"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/rightBorder"
        android:orientation="vertical"
        app:layout_constraintGuide_end="@dimen/frame_padding_24"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>


    <ImageView
        android:id="@+id/artwork_player"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintDimensionRatio="h, 1:1"
        android:layout_marginTop="@dimen/frame_padding_26"
        android:src="@drawable/artwork_placeholder"
        app:layout_constraintTop_toBottomOf="@id/back_button_layout"
        app:layout_constraintEnd_toEndOf="@id/rightBorder"
        app:layout_constraintStart_toStartOf="@id/leftBorder"
        app:layout_constraintVertical_chainStyle="spread"/>

    <TextView
        style="@style/TrackPlayerTextView"
        android:id="@+id/track_title_player"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/frame_padding_24"
        app:layout_constraintStart_toStartOf="@id/leftBorder"
        app:layout_constraintTop_toBottomOf="@+id/artwork_player"
        tools:text="747" />

    <TextView
        style="@style/ArtistPlayerTextView"
        android:id="@+id/artist_name_player"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        tools:text="Kent"
        android:layout_marginTop="@dimen/frame_padding_12"
        app:layout_constraintTop_toBottomOf="@+id/track_title_player"
        app:layout_constraintStart_toStartOf="@id/leftBorder"
        />

    <ImageView
        android:id="@+id/add_to_playlist_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/added_false_icon"
        android:layout_marginTop="@dimen/frame_padding_30"
        app:layout_constraintBottom_toBottomOf="@+id/play_button"
        app:layout_constraintEnd_toStartOf="@id/play_button"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintHorizontal_chainStyle="spread_inside"
        app:layout_constraintStart_toStartOf="@id/leftBorder"
        app:layout_constraintTop_toBottomOf="@id/artist_name_player" />
    <ImageView
        android:id="@+id/play_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/play_button"
        android:layout_marginTop="@dimen/frame_padding_30"
        app:layout_constraintTop_toBottomOf="@id/artist_name_player"
        app:layout_constraintStart_toEndOf="@id/add_to_playlist_button"
        app:layout_constraintEnd_toStartOf="@id/add_to_favorite_button"/>

    <ImageView
        android:id="@+id/add_to_favorite_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/frame_padding_30"
        android:src="@drawable/favorite_false_icon"
        app:layout_constraintBottom_toBottomOf="@+id/play_button"
        app:layout_constraintEnd_toStartOf="@id/rightBorder"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@id/play_button"
        app:layout_constraintTop_toBottomOf="@id/artist_name_player" />

    <TextView
        style="@style/DescriptionPlayerTextView"
        android:id="@+id/duration_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintHorizontal_chainStyle="spread_inside"
        app:layout_constraintTop_toBottomOf="@id/play_button"
        app:layout_constraintStart_toEndOf="@id/leftBorder"
        app:layout_constraintEnd_toStartOf="@id/track_duration_text"
        android:text="@string/duration" />

    <TextView
        style="@style/DescriptionPlayerText"
        android:id="@+id/track_duration_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toEndOf="@id/duration_view"
        app:layout_constraintTop_toBottomOf="@id/play_button"
        app:layout_constraintEnd_toStartOf="@id/rightBorder"
        tools:text="7:47" />

    <TextView
        style="@style/DescriptionPlayerTextView"
        android:id="@+id/album_title_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/padding_9"
        app:layout_constraintHorizontal_chainStyle="spread_inside"
        app:layout_constraintTop_toBottomOf="@id/duration_view"
        app:layout_constraintStart_toEndOf="@id/leftBorder"
        app:layout_constraintEnd_toStartOf="@+id/album_title_text"
        android:text="@string/album" />

    <TextView
        style="@style/DescriptionPlayerText"
        android:id="@+id/album_title_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/padding_9"
        app:layout_constraintStart_toEndOf="@id/album_title_view"
        app:layout_constraintTop_toBottomOf="@id/track_duration_text"
        app:layout_constraintEnd_toStartOf="@id/rightBorder"
        tools:text="Isola" />

    <TextView
        style="@style/DescriptionPlayerTextView"
        android:id="@+id/year_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/padding_9"
        app:layout_constraintHorizontal_chainStyle="spread_inside"
        app:layout_constraintTop_toBottomOf="@id/album_title_view"
        app:layout_constraintStart_toEndOf="@id/leftBorder"
        app:layout_constraintEnd_toStartOf="@+id/year_text"
        android:text="@string/releaseYear" />

    <TextView
        style="@style/DescriptionPlayerText"
        android:id="@+id/year_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/padding_9"
        app:layout_constraintStart_toEndOf="@id/year_view"
        app:layout_constraintTop_toBottomOf="@id/album_title_text"
        app:layout_constraintEnd_toStartOf="@id/rightBorder"
        tools:text="1997" />

    <TextView
        style="@style/DescriptionPlayerTextView"
        android:id="@+id/genre_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/padding_9"
        app:layout_constraintHorizontal_chainStyle="spread_inside"
        app:layout_constraintTop_toBottomOf="@id/year_view"
        app:layout_constraintStart_toEndOf="@id/leftBorder"
        app:layout_constraintEnd_toStartOf="@+id/genre_text"
        android:text="@string/genre" />

    <TextView
        style="@style/DescriptionPlayerText"
        android:id="@+id/genre_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/padding_9"
        app:layout_constraintStart_toEndOf="@id/genre_view"
        app:layout_constraintTop_toBottomOf="@id/year_text"
        app:layout_constraintEnd_toStartOf="@id/rightBorder"
        tools:text="Rock" />

    <TextView
        style="@style/DescriptionPlayerTextView"
        android:id="@+id/country_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/padding_9"
        app:layout_constraintHorizontal_chainStyle="spread_inside"
        app:layout_constraintTop_toBottomOf="@+id/genre_view"
        app:layout_constraintStart_toEndOf="@id/leftBorder"
        app:layout_constraintEnd_toStartOf="@+id/country_text"
        android:text="@string/country" />

    <TextView
        style="@style/DescriptionPlayerText"
        android:id="@+id/country_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/padding_9"
        app:layout_constraintStart_toEndOf="@+id/country_view"
        app:layout_constraintTop_toBottomOf="@id/genre_text"
        app:layout_constraintEnd_toStartOf="@id/rightBorder"
        tools:text="Rock" />


</androidx.constraintlayout.widget.ConstraintLayout> </ScrollView>